--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         Paris, Belleville
                    </p>
               </div>
-               <h2 class="concepte-titre"> Résevez le menu qui vous convient </h2>
+               <h2 class="concepte-titre"> Réservez le menu qui vous convient </h2>
                 <p class="concepte-description"> Découvrez des restaurants d'exception, séléctionnés par nos soins </p>
                  <button class="btn_concept" title="Trouvez des restaurants sur la carte"> Explorez nos restaurants </button>
          </section>
@@ -113,7 +113,7 @@
                            <div class="btn__card">
                               <span class="new"> Nouveau </span>
                            </div>
-							<a href="pages/le-delice-des-sens.html">
+							<a href="pages/le-délice-des-sens.html">
 								<img class="restaurant-image" src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le-delice-des-sens">
 									<div class="restaurant-texte">
 										<h4> Le délice des sens </h4>
